@@ -1,5 +1,8 @@
 version 0.7.2 - xxx
+ . Demos: ParticleDemo uses touches to move the center of the emitter (issue #138)
+ . Particles: Use by default fire.pvr (issue #276)
  . TextureAtlas: fixed colorarray memory leak (issue #272)
+ . TileMapAtlas: supports fullpath (issue #220)
  
 version 0.7.1 - 20-Mar-2009
  . Actions: added tags to actions (issue #222)
